--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1008,7 +1008,9 @@
                                                   <widget class="GtkLabel" id="label43">
                                                     <property name="visible">True</property>
                                                     <property name="xalign">0</property>
-                                                    <property name="label" translatable="yes">Name:</property>
+                                                    <property name="label" translatable="yes">_Name:</property>
+                                                    <property name="use_underline">True</property>
+                                                    <property name="mnemonic_widget">overview-name</property>
                                                   </widget>
                                                   <packing>
                                                     <property name="x_options">GTK_FILL</property>
@@ -1066,20 +1068,6 @@
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <widget class="GtkLabel" id="overview-name">
-                                                    <property name="visible">True</property>
-                                                    <property name="xalign">0</property>
-                                                    <property name="label">test-vm</property>
-                                                    <property name="selectable">True</property>
-                                                  </widget>
-                                                  <packing>
-                                                    <property name="left_attach">1</property>
-                                                    <property name="right_attach">2</property>
-                                                    <property name="x_options">GTK_FILL</property>
-                                                    <property name="y_options">GTK_FILL</property>
-                                                  </packing>
-                                                </child>
-                                                <child>
                                                   <widget class="GtkLabel" id="label24">
                                                     <property name="visible">True</property>
                                                     <property name="xalign">0</property>
@@ -1125,6 +1113,18 @@
                                                     <property name="top_attach">4</property>
                                                     <property name="bottom_attach">5</property>
                                                     <property name="x_options">GTK_FILL</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkEntry" id="overview-name">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="invisible_char">●</property>
+                                                    <signal name="changed" handler="on_overview_name_changed"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="left_attach">1</property>
+                                                    <property name="right_attach">2</property>
                                                   </packing>
                                                 </child>
                                               </widget>
@@ -3785,7 +3785,7 @@ I/O:</property>
                                               <widget class="GtkVBox" id="network-source-box">
                                                 <property name="visible">True</property>
                                                 <child>
-                                                  <widget class="GtkHBox" id="hbox19">
+                                                  <widget class="GtkHBox" id="hbox7">
                                                     <property name="visible">True</property>
                                                     <child>
                                                       <widget class="GtkComboBox" id="network-source-combo">
@@ -4039,7 +4039,7 @@ I/O:</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkAlignment" id="alignment29">
+                                          <widget class="GtkAlignment" id="alignment5">
                                             <property name="visible">True</property>
                                             <child>
                                               <placeholder/>
@@ -4052,7 +4052,7 @@ I/O:</property>
                                       </widget>
                                     </child>
                                     <child>
-                                      <widget class="GtkLabel" id="label5">
+                                      <widget class="GtkLabel" id="label6">
                                         <property name="visible">True</property>
                                         <property name="label" translatable="yes">Virtual port</property>
                                         <property name="use_markup">True</property>
@@ -4783,7 +4783,7 @@ I/O:</property>
                                     <property name="label_xalign">0</property>
                                     <property name="shadow_type">none</property>
                                     <child>
-                                      <widget class="GtkAlignment" id="alignment5">
+                                      <widget class="GtkAlignment" id="alignment10">
                                         <property name="visible">True</property>
                                         <property name="top_padding">3</property>
                                         <property name="left_padding">12</property>
@@ -4843,7 +4843,7 @@ I/O:</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkLabel" id="label6">
+                              <widget class="GtkLabel" id="label15">
                                 <property name="visible">True</property>
                                 <property name="label">phy</property>
                               </widget>
@@ -4862,7 +4862,7 @@ I/O:</property>
                                     <property name="label_xalign">0</property>
                                     <property name="shadow_type">none</property>
                                     <child>
-                                      <widget class="GtkAlignment" id="alignment10">
+                                      <widget class="GtkAlignment" id="alignment22">
                                         <property name="visible">True</property>
                                         <property name="top_padding">3</property>
                                         <property name="left_padding">12</property>
@@ -4942,7 +4942,7 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkHBox" id="hbox7">
+                                              <widget class="GtkHBox" id="hbox12">
                                                 <property name="visible">True</property>
                                                 <property name="spacing">6</property>
                                                 <child>
@@ -5000,7 +5000,7 @@ I/O:</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkLabel" id="label15">
+                              <widget class="GtkLabel" id="label25">
                                 <property name="visible">True</property>
                                 <property name="label">vid</property>
                               </widget>
@@ -5019,7 +5019,7 @@ I/O:</property>
                                     <property name="label_xalign">0</property>
                                     <property name="shadow_type">none</property>
                                     <child>
-                                      <widget class="GtkAlignment" id="alignment22">
+                                      <widget class="GtkAlignment" id="alignment30">
                                         <property name="visible">True</property>
                                         <property name="top_padding">3</property>
                                         <property name="left_padding">12</property>
@@ -5059,7 +5059,7 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkHBox" id="hbox12">
+                                              <widget class="GtkHBox" id="hbox13">
                                                 <property name="visible">True</property>
                                                 <property name="spacing">6</property>
                                                 <child>
@@ -5093,7 +5093,7 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkHBox" id="hbox13">
+                                              <widget class="GtkHBox" id="hbox20">
                                                 <property name="visible">True</property>
                                                 <property name="spacing">6</property>
                                                 <child>
@@ -5149,7 +5149,7 @@ I/O:</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkLabel" id="label25">
+                              <widget class="GtkLabel" id="label35">
                                 <property name="visible">True</property>
                                 <property name="label">wdog</property>
                               </widget>
@@ -5165,7 +5165,7 @@ I/O:</property>
                                 <property name="label_xalign">0</property>
                                 <property name="shadow_type">none</property>
                                 <child>
-                                  <widget class="GtkAlignment" id="alignment30">
+                                  <widget class="GtkAlignment" id="alignment34">
                                     <property name="visible">True</property>
                                     <property name="top_padding">3</property>
                                     <property name="left_padding">12</property>
