--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -496,6 +496,20 @@
                     <property name="homogeneous">True</property>
                   </packing>
                 </child>
+                <child>
+                  <widget class="GtkToolButton" id="details-cancel-customize">
+                    <property name="visible">True</property>
+                    <property name="is_important">True</property>
+                    <property name="label" translatable="yes">_Cancel</property>
+                    <property name="use_underline">True</property>
+                    <property name="stock_id">gtk-cancel</property>
+                    <signal name="clicked" handler="on_details_cancel_customize_clicked"/>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
               </widget>
               <packing>
                 <property name="position">1</property>
@@ -1249,7 +1263,6 @@
                                               <widget class="GtkTreeView" id="inspection-apps">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
-                                                <property name="headers_visible">True</property>
                                               </widget>
                                             </child>
                                           </widget>
@@ -3638,7 +3651,7 @@ I/O:</property>
                                                       </packing>
                                                     </child>
                                                     <child>
-                                                      <widget class="GtkLabel" id="label73">
+                                                      <widget class="GtkLabel" id="label6">
                                                         <property name="visible">True</property>
                                                         <property name="xalign">1</property>
                                                         <property name="label" translatable="yes">Serial num_ber:</property>
@@ -3667,7 +3680,7 @@ I/O:</property>
                                                           </packing>
                                                         </child>
                                                         <child>
-                                                          <widget class="GtkAlignment" id="alignment44">
+                                                          <widget class="GtkAlignment" id="alignment5">
                                                             <property name="visible">True</property>
                                                             <child>
                                                             <placeholder/>
@@ -4214,7 +4227,7 @@ I/O:</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkAlignment" id="alignment5">
+                                          <widget class="GtkAlignment" id="alignment10">
                                             <property name="visible">True</property>
                                             <child>
                                               <placeholder/>
@@ -4227,7 +4240,7 @@ I/O:</property>
                                       </widget>
                                     </child>
                                     <child>
-                                      <widget class="GtkLabel" id="label6">
+                                      <widget class="GtkLabel" id="label8">
                                         <property name="visible">True</property>
                                         <property name="label" translatable="yes">Virtual port</property>
                                         <property name="use_markup">True</property>
@@ -5076,7 +5089,7 @@ I/O:</property>
                                     <property name="label_xalign">0</property>
                                     <property name="shadow_type">none</property>
                                     <child>
-                                      <widget class="GtkAlignment" id="alignment10">
+                                      <widget class="GtkAlignment" id="alignment22">
                                         <property name="visible">True</property>
                                         <property name="top_padding">3</property>
                                         <property name="left_padding">12</property>
@@ -5155,7 +5168,7 @@ I/O:</property>
                                     <property name="label_xalign">0</property>
                                     <property name="shadow_type">none</property>
                                     <child>
-                                      <widget class="GtkAlignment" id="alignment22">
+                                      <widget class="GtkAlignment" id="alignment30">
                                         <property name="visible">True</property>
                                         <property name="top_padding">3</property>
                                         <property name="left_padding">12</property>
@@ -5312,7 +5325,7 @@ I/O:</property>
                                     <property name="label_xalign">0</property>
                                     <property name="shadow_type">none</property>
                                     <child>
-                                      <widget class="GtkAlignment" id="alignment30">
+                                      <widget class="GtkAlignment" id="alignment34">
                                         <property name="visible">True</property>
                                         <property name="top_padding">3</property>
                                         <property name="left_padding">12</property>
@@ -5458,7 +5471,7 @@ I/O:</property>
                                 <property name="label_xalign">0</property>
                                 <property name="shadow_type">none</property>
                                 <child>
-                                  <widget class="GtkAlignment" id="alignment34">
+                                  <widget class="GtkAlignment" id="alignment35">
                                     <property name="visible">True</property>
                                     <property name="top_padding">3</property>
                                     <property name="left_padding">12</property>
@@ -5526,7 +5539,7 @@ I/O:</property>
                                 <property name="label_xalign">0</property>
                                 <property name="shadow_type">none</property>
                                 <child>
-                                  <widget class="GtkAlignment" id="alignment35">
+                                  <widget class="GtkAlignment" id="alignment45">
                                     <property name="visible">True</property>
                                     <property name="top_padding">3</property>
                                     <property name="left_padding">12</property>
@@ -5664,7 +5677,7 @@ I/O:</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkLabel" id="label8">
+                              <widget class="GtkLabel" id="label41">
                                 <property name="visible">True</property>
                                 <property name="label">fs</property>
                               </widget>
@@ -5678,24 +5691,24 @@ I/O:</property>
                               <widget class="GtkVBox" id="vbox16">
                                 <property name="visible">True</property>
                                 <child>
-                                  <widget class="GtkFrame" id="frame17">
+                                  <widget class="GtkFrame" id="frame18">
                                     <property name="visible">True</property>
                                     <property name="label_xalign">0</property>
                                     <property name="shadow_type">none</property>
                                     <child>
-                                      <widget class="GtkAlignment" id="alignment43">
+                                      <widget class="GtkAlignment" id="alignment46">
                                         <property name="visible">True</property>
                                         <property name="top_padding">3</property>
                                         <property name="left_padding">12</property>
                                         <child>
-                                          <widget class="GtkTable" id="table17">
+                                          <widget class="GtkTable" id="table18">
                                             <property name="visible">True</property>
                                             <property name="border_width">3</property>
                                             <property name="n_columns">2</property>
                                             <property name="column_spacing">8</property>
                                             <property name="row_spacing">4</property>
                                             <child>
-                                              <widget class="GtkLabel" id="label41">
+                                              <widget class="GtkLabel" id="label74">
                                                 <property name="visible">True</property>
                                                 <property name="xalign">0</property>
                                                 <property name="label" translatable="yes">M_ode:</property>
@@ -5744,7 +5757,7 @@ I/O:</property>
                                       </widget>
                                     </child>
                                     <child>
-                                      <widget class="GtkLabel" id="label70">
+                                      <widget class="GtkLabel" id="label75">
                                         <property name="visible">True</property>
                                         <property name="label" translatable="yes">&lt;b&gt;Smartcard Device&lt;/b&gt;</property>
                                         <property name="use_markup">True</property>
@@ -5764,7 +5777,7 @@ I/O:</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkLabel" id="label71">
+                              <widget class="GtkLabel" id="label76">
                                 <property name="visible">True</property>
                                 <property name="label">snd</property>
                               </widget>
@@ -5836,7 +5849,7 @@ I/O:</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkLabel" id="label72">
+              <widget class="GtkLabel" id="label77">
                 <property name="visible">True</property>
                 <property name="label">Details</property>
               </widget>
